test/cli/test-mutating-policy/mutate-pod-binding-subresource/resource.yaml
apiVersion: v1
kind: Binding
metadata:
  name: pod-to-get-aws-zone-id
  namespace: default
target:
  apiVersion: v1
  kind: Node
  name: my-test-node
