test/cli/test-mutating-policy/mutate-pod-binding-subresource/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
subresources:
- parentResource:
    kind: Pod
    name: pods
    namespaced: true
    singularName: ""
    verbs: null
    version: v1
  subresource:
    kind: Binding
    name: pods/binding
    namespaced: true
    singularName: ""
    verbs: null
    version: v1
